ajout d'information dans la présentation des cours FAIT: ajout de l'utilisateur FAIT: ajout d'icons

--- a/Contenu/css/style.css
+++ b/Contenu/css/style.css
@@ -45,3 +45,11 @@ h1 {
 #titreLanguages {
     font-size : 100%;
 }
+
+.material-icons{
+    padding: 0;
+}
+
+.material-icons.ui-icon-clock{
+    font-size: 20px;
+}
